--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -57,4 +57,11 @@
     <string name="about_activity_drawer_drawer">אודותינו</string>
     <string name="write_us_activity_drawer_drawer">כתבו לנו</string>
     <string name="please_fill_requiered_information_addmins">נא למלא את המידע הנדרש!</string>
+    <string name="pictures_bottom_nav">תמונות</string>
+    <string name="use_location_add_mins">השתמש במיקום!</string>
+    <string name="not_in_train_station_addmins">את/ה לא בתחנת רכבת!</string>
+    <string name="report_bottom_nav">דווח</string>
+    <string name="complain_bottom_nav">תלונות</string>
+    <string name="help_prove_train_late">תעזרו לנו להוכיח שהרכבת מאחרת!</string>
+    <string name="take_out_frustration">זה המקום להוציא את התיסכול ביחד!</string>
 </resources>
