--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,4 +133,6 @@
     <string name="take_out_frustration">זה המקום להוציא את התיסכול ביחד!</string>
     <string name="use_location_add_mins">השתמש במיקום!</string>
     <string name="not_in_train_station_addmins">את/ה לא בתחנת רכבת!</string>
+    <string name="your_not_at_station">אתה לא בתחנת רכבת!</string>
+    <string name="complete_info_for_update">חייבים להיות בתוך תחנת רכבת בשביל לדווח!</string>
 </resources>
