--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -64,4 +64,6 @@
     <string name="complain_bottom_nav">תלונות</string>
     <string name="help_prove_train_late">תעזרו לנו להוכיח שהרכבת מאחרת!</string>
     <string name="take_out_frustration">זה המקום להוציא את התיסכול ביחד!</string>
+    <string name="your_not_at_station">אתה לא בתחנת רכבת!</string>
+    <string name="complete_info_for_update">חייבים להיות בתוך תחנת רכבת בשביל לדווח!</string>
 </resources>
