--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,4 +133,7 @@
     <string name="take_out_frustration">זה המקום להוציא את התיסכול ביחד!</string>
     <string name="use_location_add_mins">השתמש במיקום!</string>
     <string name="not_in_train_station_addmins">את/ה לא בתחנת רכבת!</string>
+    <string name="history_bottom_nav">היסטוריה</string>
+    <string name="define_date_fh">הגדר תאריך</string>
+    <string name="date_path">%1$d/%2$d/%3$d</string>
 </resources>
