--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">רקבת</string>
+    <string name="app_name">LateTrain</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
@@ -139,7 +139,7 @@
     <string name="complete_info_for_update">חייבים להיות בתוך תחנת רכבת בשביל לדווח!</string>
     <string name="about_us_name">אודותינו</string>
     <string name="write_us_name">כתבו לנו</string>
-    <string name="app_subtitle">הופכים את הרקבת לרכבת</string>
+    <string name="app_subtitle">עושים שינוי ברכבת</string>
     <string name="image_uploaded_message">התמונה הועלתה וממתינה לאישור</string>
     <string name="waiting_message_addmins">תוכלו לדווח שוב בעוד 30 דקות</string>
     <string name="thanks_he">תודה!</string>
@@ -156,4 +156,5 @@
     <string name="app_path">com.improve.latetrain</string>
     <string name="to_info">to info</string>
     <string name="send_minutes_waited">send_minutes_waited</string>
+    <string name="profile_picture_content_description">Profile picture</string>
 </resources>
