Room added, converted getTotalWaitingMinutes function in FirebaseConnection to be integrated with room and the repository. Migrated all FirebaseConnection functions to be integrated with room and the repository

--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -88,5 +88,6 @@
     <string name="to_info">to info</string>
     <string name="send_minutes_waited">send_minutes_waited</string>
     <string name="profile_picture_content_description">Profile picture</string>
+    <string name="tamp_day">TEMP_DAY</string>
 
 </resources>
