changed way of getting user ID in ChatFragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,4 +158,5 @@
     <string name="send_minutes_waited">send_minutes_waited</string>
     <string name="profile_picture_content_description">Profile picture</string>
     <string name="tamp_day">TEMP_DAY</string>
+    <string name="uid">UID</string>
 </resources>
